Gave more whitespace to dropdown and fixed volunteer card alignment

--- a/components/layout/navbar/dropdown/dropdown.module.scss
+++ b/components/layout/navbar/dropdown/dropdown.module.scss
@@ -29,5 +29,5 @@
 .hiddenMenu {
   @extend .submenu;
   opacity: 0;
-  transition: opacity 0.5s 0s;
+  transition: opacity 0.3s 0s;
 }
