--- a/components/sections/other/volunteering/volunteeringCard/VolunteeringCard.module.scss
+++ b/components/sections/other/volunteering/volunteeringCard/VolunteeringCard.module.scss
@@ -9,6 +9,10 @@
     height: 100px;
     width: 100%;
   }
+
+  .back {
+    font-size: 0.8rem;
+  }
 }
 
 .hoverWrapper {
